update swagger amd reviews
